--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
+    "@tailwindcss/typography": "^0.5.16",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
