--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "framer-motion": "^12.23.3",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.525.0",
-    "next": "15.3.5",
+    "next": "^15.3.6",
     "next-mdx-remote": "^5.0.0",
     "next-sitemap": "^4.2.3",
     "react": "^19.0.0",
@@ -29,12 +29,12 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
-    "@tailwindcss/typography": "^0.5.16",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
